added comments to index script

--- a/public/index.html
+++ b/public/index.html
@@ -14,19 +14,19 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="total">
-      <div class="total">Your total is: $<span id="total">0</span></div>
-    </div>
+    <header class="total">
+      <h1 class="total">Your total is: $<span id="total">0</span></h1>
+    </header>
 
-    <div class="form">
+    <section class="form">
       <input type="text" id="t-name" placeholder="Name of transaction" />
       <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
       <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
       <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
       <p class="error"></p>
-    </div>
+    </section>
 
-    <div class="transactions">
+    <section class="transactions">
       <table>
         <thead>
           <th>Transaction</th>
@@ -36,7 +36,7 @@
           
         </tbody>
       </table>
-    </div>
+    </section>
     
     <canvas id="myChart"></canvas>
   </div>
