--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,15 @@
     </header>
 
     <section class="form">
-      <input type="text" id="t-name" placeholder="Name of transaction" />
-      <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
-      <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
-      <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+      <div class="button-row">
+        <input type="text" id="t-name" placeholder="Name of transaction" />
+        <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
+      </div>
+      <div class="button-row">
+        <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
+        <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+        <button id="clr-btn" class="danger"><i class="fa fa-minus"></i> Clear Transactions</button>
+      </div>
       <p class="error"></p>
     </section>
 
